# sgal

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  INSTALL  README.md  bitbucket-pipelines.yml
src/: CMakeLists.txt  SGALConfig.cmake.in  SGALConfigVersion.cmake.in  makefile
src/cmds/: CMakeLists.txt  makefile
src/cmds/knot/: CMakeLists.txt  Knot_option_parser.cpp  Knot_option_parser.hpp  Knot_scene.cpp  Knot_scene.hpp  knot.cpp  makefile
src/cmds/player/: CMakeLists.txt  Player.hpp  Player_option_parser.cpp  Player_option_parser.hpp  Player_scene.cpp  Player_scene.hpp  makefile  player.cpp  player.dsp  player.dsw  player_pybindings.cpp
src/cmds/player/control/: PlayerControl.aps  PlayerControl.cpp  PlayerControl.def  PlayerControl.h  PlayerControl.hpj  PlayerControl.idl  PlayerControl.rc  PlayerControl.sln  PlayerControl.vcproj  PlayerControlCtrl.cpp  PlayerControlCtrl.h  PlayerControlPropPage.cpp  PlayerControlPropPage.h  ReadMe.txt  resource.h  stdafx.cpp  stdafx.h
src/cmds/player/control/hlp/: PlayerControl.hm
src/cmds/player2/: CMakeLists.txt  Parse_player2_cl.cpp  Parse_player2_cl.hpp  Player2_option_parser.cpp  Player2_option_parser.hpp  Player2_scene.cpp  Player2_scene.hpp  makefile  player.cpp
src/cmds/v8/: hello_world.cpp  makefile  v8.cpp
src/libs/: CMakeLists.txt  makefile
src/libs/FPG/: CMakeLists.txt
src/libs/FPG/include/FPG/: basic.hpp  config.hpp
src/libs/FPG/lib/: Cabinet_impl.cpp  Cash_register_impl.cpp  Cash_register_spec.txt  Column_impl.cpp  Column_spec.txt  Counter_area_spec.txt  Counter_deck_impl.cpp  Counter_spec.txt  Fitting_area_spec.txt  Fitting_room_spec.txt  Storage_room_spec.txt  Store_element_spec.txt  Store_impl.cpp  Store_spec.txt  Wall_impl.cpp  Wall_spec.txt  gen_node.py  init.cpp
src/libs/FPG/specs/: Cabinet.cfg  Cabinet_fields_spec.txt  Cabinet_spec.txt  Cash_register.cfg  Cash_register_fields_spec.txt  Cash_register_spec.txt  Column.cfg  Column_fields_spec.txt  Column_spec.txt  Counter.cfg  Counter_area.cfg  Counter_area_fields_spec.txt  Counter_area_spec.txt  Counter_deck.cfg  Counter_deck_fields_spec.txt  Counter_deck_spec.txt  Counter_fields_spec.txt  Counter_spec.txt  Enterance.cfg  Enterance_fields_spec.txt  Enterance_spec.txt  Fitting_area.cfg  Fitting_area_fields_spec.txt  Fitting_area_spec.txt  Fitting_room.cfg  Fitting_room_fields_spec.txt  Fitting_room_lobby.cfg  Fitting_room_lobby_fields_spec.txt  Fitting_room_lobby_spec.txt  Fitting_room_spec.txt  Room.cfg  Room_fields_spec.txt  Room_spec.txt  Storage_room.cfg  Storage_room_fields_spec.txt  Storage_room_spec.txt  Store.cfg  Store_element.cfg  Store_element_fields_spec.txt  Store_element_spec.txt  (+8 more)
src/libs/GL/: CMakeLists.txt
src/libs/GL/include/: makefile
src/libs/GL/include/GL/: glext.h  glut.h  makefile
src/libs/SCGAL/: CMakeLists.txt
src/libs/SCGAL/include/: makefile
src/libs/SCGAL/include/SCGAL/: basic.hpp  config.hpp  makefile
src/libs/SCGAL/include/engines/: makefile
src/libs/SCGAL/include/geo/: makefile
src/libs/SCGAL/lib/: init.cpp  makefile
src/libs/SCGAL/lib/engines/: Boolean_operation.cpp  Smallest_stabbing_cube.cpp  Surface_border.cpp
src/libs/SCGAL/lib/geometries/: Arrangement_of_polygeodesics_on_sphere_base_geo.cpp  Arrangement_of_polygeodesics_on_sphere_geo.cpp  Arrangement_on_cube_renderers.cpp  Arrangement_on_quadric_geo.cpp  Arrangement_on_sphere_base_geo.cpp  Arrangement_on_sphere_geo.cpp  Arrangement_on_sphere_graph_geo.cpp  Arrangement_on_sphere_marked_geo.cpp  Arrangement_on_sphere_overlay_geo.cpp  Arrangement_on_sphere_renderers.cpp  Arrangement_on_sphere_sim_geo.cpp  Arrangement_on_surface_geo.cpp  Arrangement_on_torus_base_geo.cpp  Arrangement_on_torus_geo.cpp  Arrangement_on_torus_renderers.cpp  Arrangement_renderer.cpp  Assembly.cpp  Assembly_part.cpp  Exact_coord2_array.cpp  (+34 more)
src/libs/SEGO/: makefile
src/libs/SEGO/include/: makefile
src/libs/SEGO/lib/: Ego.cpp  Ego_brick.cpp  Ego_geo.cpp  Ego_voxelizer.cpp  Ego_voxels.cpp  Ego_voxels_filler.cpp  Ego_voxels_filler_base.cpp  Ego_voxels_filler_graph.cpp  Ego_voxels_incidence_graph.cpp  Ego_voxels_layer_filler.cpp  Ego_voxels_layer_filler_graph.cpp  Ego_voxels_tiler.cpp  Ego_voxels_vertex_list_graph.cpp  Ego_voxels_vertex_list_graph_utils.cpp  init.cpp  makefile
src/libs/SGAL/: CMakeLists.txt  Doxyfile
src/libs/SGAL/include/: makefile
src/libs/SGAL/lib/: Accumulation.cpp  Antialiasing.cpp  Appearance.cpp  Background.cpp  Billboard.cpp  Bindable_node.cpp  Bindable_stack.cpp  Bounding_sphere.cpp  Camera.cpp  Collision.cpp  Color_background.cpp  Color_map.cpp  Composed_shader.cpp  Configuration.cpp  Container.cpp  Container_factory.cpp  Container_proto.cpp  Context.cpp  Cube_environment.cpp  Cull_context.cpp  Default_event_filter.cpp  Draw_action.cpp  Dxf_configuration.cpp  Dxf_header_variables.cpp  Dxf_parser.cpp  Environment_background.cpp  Environment_map.cpp  Execution_coordinator.cpp  Exporter.cpp  Field.cpp  Field_def.cpp  Field_info.cpp  Field_rule.cpp  Field_type.cpp  Fog.cpp  Font.cpp  Font_outliner.cpp  Font_style.cpp  Fragment_shader.cpp  Frustum.cpp  (+82 more)
src/libs/SGAL/specs/: Inline.cfg  Inline_fields.txt  Inline_fields_spec.txt
src/libs/boost/: CMakeLists.txt  makefile
src/libs/boost/include/: makefile
src/libs/dxf/: CMakeLists.txt  Doxyfile
src/libs/dxf/lib/: Dxf_base_boundary_path.cpp  Dxf_base_entity.cpp  Dxf_base_entry.cpp  Dxf_base_object.cpp  Dxf_base_table.cpp  Dxf_block.cpp  Dxf_boundary_path.cpp  Dxf_builder.cpp  Dxf_circle_edge.cpp  Dxf_data.cpp  Dxf_ellipse_edge.cpp  Dxf_endblk.cpp  Dxf_extended_data.cpp  Dxf_header.cpp  Dxf_header_full.cpp  Dxf_header_members.cpp  Dxf_line_edge.cpp  Dxf_parser.cpp  Dxf_parser_add_polylines.cpp  Dxf_pattern_data.cpp  Dxf_polyline_boundary_path.cpp  Dxf_spline_edge.cpp  Dxf_updater.cpp  Dxf_writer.cpp  code_type.cpp  init.cpp
src/libs/flex/: makefile
src/libs/flex/include/: makefile
src/libs/gl2ps/: README
src/libs/gl2ps/include/: gl2ps.h  makefile
src/libs/gl2ps/lib/: TODO  gl2ps.c  gl2psTest.c  makefile
src/scripts/: CMakeLists.txt  gen_node.py
(+1799 files in other folders)
